# pseyepy

./: README.md  display.py  pyproject.toml
pseyepy/: cameras.pyx  io.py
